la premiere mis a jour

--- a/index.html
+++ b/index.html
@@ -51,37 +51,42 @@
 
         <section class=" section">
             <h2>nos services</h2>
-            <div class="services">
-                <div class="service">
-                    <div class="serv-titre">
-                        <img src="images/cloud-computing.svg" alt="clud" />
-                        <h3>Developement Web</h3>
+            <div class="servicesgenarale">
+                <div class="service12">
+                    <div class="service">
+                        <div class="serv-titre">
+                            <img src="images/cloud-computing.svg" alt="clud" />
+                            <h3>Developement Web</h3>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    <div class="service">
+                        <div class="serv-titre">
+                            <img src="images/presentation.svg" alt="presentation" />
+                            <h3>Formation Web</h3>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </div>
                 </div>
+                <DIV class="espace12-34">
 
-                <div class="service">
-                    <div class="serv-titre">
-                        <img src="images/presentation.svg" alt="presentation" />
-                        <h3>Formation Web</h3>
+                </DIV>
+                <div class="service34">
+                    <div class="service">
+                        <div class="serv-titre">
+                            <img src="images/seo.svg" alt="seo" />
+                            <h3>seo</h3>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-                </div>
 
-                <div class="service">
-                    <div class="serv-titre">
-                        <img src="images/seo.svg" alt="seo" />
-                        <h3>seo</h3>
+                    <div class="service">
+                        <div class="serv-titre">
+                            <img src="images/settings.svg" alt="presentation" />
+                            <h3>DevOps</h3>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-                </div>
-
-                <div class="service">
-                    <div class="serv-titre">
-                        <img src="images/settings.svg" alt="presentation" />
-                        <h3>DevOps</h3>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
                 </div>
             </div>
         </section>
@@ -89,8 +94,8 @@
 
         <section class="section">
             <h2>Contactez Nous</h2>
-            <div class="image-fin">
-                <img src="images/office.jpg" alt="image de fin" />
+            <div class="imagedefin"><img src="images/office.jpg" alt="image de fin" /></div>
+            <div class="formulaire">
                 <form method="post" action="traitement.php">
                     <div class="whatsapp">
                         <span class="num">0779512372</span><img src="images/whatsapp.png" alt="whatsapp" />
