--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 
         <section class="section">
             <h2>Experience de travail</h2>
-            <ul class="images">
-                <li class="image"> <img src="images/bproo.com.png" alt="bproo" " /></li>
+            <div>
+                <ul class="images">
+                    <li class="image"> <img src="images/bproo.com.png" alt="bproo" " /></li>
                 <li class=" image"> <img src="images/bproo.fr.png" alt="bproo" /> </li>
+            </div>
             </ul>
         </section>
 
@@ -94,13 +96,12 @@
 
         <section class="section">
             <h2>Contactez Nous</h2>
-            <div class="imagedefin"><img src="images/office.jpg" alt="image de fin" /></div>
             <div class="formulaire">
+                <img src="images/office.jpg" alt="image de fin" />
                 <form method="post" action="traitement.php">
                     <div class="whatsapp">
-                        <span class="num">0779512372</span><img src="images/whatsapp.png" alt="whatsapp" />
+                        <img src="images/whatsapp.png" alt="whatsapp" /><span class="num">0779512372</span>
                     </div>
-
                     <input type="text" name="nom" placeholder="nom et prenom" />
                     <input type="email" name="mail" placeholder="votre mail" />
                     <textarea name="commantaire" id="" cols="30" rows="10" placeholder="votre commantaire"></textarea>
